--- a/src/css/scss/pages/_category.scss
+++ b/src/css/scss/pages/_category.scss
@@ -126,6 +126,7 @@
   .category-page .category-page-section .category-box .content h3{
     font-size: 14px;
     margin-bottom: 4px;
+    min-height: auto;
   }
   .category-page .category-page-section .category-box .content {
     padding: 16px;
