--- a/src/css/scss/base/_helpers.scss
+++ b/src/css/scss/base/_helpers.scss
@@ -279,7 +279,7 @@ a{
 }
 @media (max-width: 992px) {
   .container{
-    padding-right: 32px;
-    padding-left: 32px;
+    // padding-right: 32px;
+    // padding-left: 32px;
   }
 }
