--- a/src/css/scss/pages/_home.scss
+++ b/src/css/scss/pages/_home.scss
@@ -31,6 +31,10 @@
         display: flex;
         align-items: center;
         height: 100%;
+        img{
+          width: auto;
+          margin: 0;
+        }
       }
       h1{
         font-size: 24px;
@@ -46,6 +50,7 @@
           font-weight: bold;
           font-family: "Helvetica";
           margin-bottom: 16px;
+          font-weight: 600;
         }
       } 
     }
@@ -72,6 +77,7 @@
         color: #000000;
         font-family: "SF Pro Display";
         margin: 0 8px;
+        font-weight: 500;
       }
     }
   }
@@ -270,7 +276,7 @@
   margin-top: 60px;
   .category-box{
     justify-content: space-between;
-    margin-bottom: 8px;
+    margin-bottom: 16px;
   }
   .cat-box{
     padding: 20px;
@@ -362,7 +368,7 @@
   }
 }
 .largest-section{
-  margin-bottom: 64px;
+  margin-bottom: 24px;
   .title-box{
     justify-content: space-between;
     padding: 0 16px;
@@ -429,7 +435,7 @@
   }
 }
 .visit-place-section{
-  margin-bottom: 36px;
+  margin-bottom: 16px;
   .visit-flex{
     justify-content: space-between;
   }
@@ -470,7 +476,7 @@
     padding: 20px;
     background-color: rgb(255, 255, 255);
     
-    margin-bottom: 20px;
+    margin-bottom: 0;
     border-radius: 8px;
   }
   .cas-in{
@@ -533,6 +539,7 @@
 
     }
   }
+
   .sub-h-1{
     // font-size: 20px;
     // color: #000000;
@@ -587,6 +594,7 @@
 @media (max-width: 1199.98px) { 
   .visit-place-section .sub-h-1 {
     font-size: 16px;
+    margin-bottom: 16px;
   }
   
   // .form-container .col-input{
@@ -636,7 +644,7 @@
     justify-content: space-between;
   }
   .category-section {
-    margin-top: 60px;
+    margin-top: 48px;
   }
   .category-section .cat-box {
     padding: 16px;
@@ -658,7 +666,7 @@
     box-shadow: 0 0 15px rgb(5 5 5 / 5%);
   }
   .largest-section {
-    margin: 32px 0;
+    margin: 32px 0 16px 0;
   }
   .largest-section .blog-carousel .item .content {
     padding: 24px 24px 16px 24px;
@@ -682,7 +690,7 @@
   .visit-place-section .right-side{
     margin-top: 24px;
     .check-out {
-      padding: 24px;
+      padding: 20px;
     }
   }
   .about-club {
@@ -714,6 +722,19 @@
   // .banner-section aside .form-container .col-input:nth-child(odd) {
   //   margin-right: 6px;
   // }
-
-
+  .banner-section article .banner-item h1 a, .banner-section article .banner-item h1 {
+    font-size: 16px;
+    line-height: 1.2;
+    br{
+      display: none;
+    }
+  
+  }
+  .about-club .title {
+    font-size: 18px;
+    margin-bottom: 18px;
+  }
+  .about-club .text {
+    margin-bottom: 12px;
+  }
 }
