--- a/src/css/scss/layout/_header.scss
+++ b/src/css/scss/layout/_header.scss
@@ -168,6 +168,7 @@
       line-height: 1.5;
       color: #000000;
       font-family: "SF Pro Display";
+      border-bottom: 3px solid #ffffff;
       // &::before {
       //   content: " ";
       //   height: 8px;
@@ -272,21 +273,7 @@
             padding: 14px 0;
             display: block;
           
-            &:hover{
-              // font-weight: 600;
-                // font-family: 'Basel-Grotesk-Medium';
-                // &::after{
-                //   content: " ";
-                //   height: 16px;
-                //   width: 16px;
-                //   border-right: 8px solid #AAFF31;
-                //   border-top: 8px solid #AAFF31;
-                //   display: inline-block;
-                //   position: absolute;
-                //   top: 4px;
-                //   right: 0;
-                // }
-            }
+            
             
           }
         }
@@ -601,7 +588,7 @@
         border-radius: 20px;
         justify-content: center;
         align-items: center;
-        margin-bottom: 32px;
+        margin-bottom: 0;
         height: auto;
         width: auto;
         cursor: pointer;
@@ -676,7 +663,6 @@
   }
   .main-wrapper .acc-header .nav-bar .nav-item:hover .sub-list {
     display: none;
-
   }
   .main-wrapper .acc-header .nav-bar .nav-item .sub-list{
     display: none;
@@ -734,6 +720,9 @@
     display: block;
   }
   .mob-menu{
+    .cl-right{
+      text-align: right;
+    }
     .ac {
       border: none;
       .ac-trigger {
@@ -802,7 +791,7 @@
       font-size: 14px;
       margin: 0;
       line-height: 1.5;
-      color: #000;
+      color: #666666;
     }
     a{
       margin: 4px 0;
@@ -835,16 +824,19 @@
     }
     .mega_menu{
       padding: 8px;
-
+      border-bottom: 1px solid #ccc;
+      margin-bottom: 16px;
     }
     .resort_heading{
       font-size: 16px;
+      font-weight: 600;
     }
     .ac .ac-trigger:focus {
       color: #000;
     }
     .ac.is-active .ac-trigger{
-      color: #ccc;
+      color: #2abbdd;
+      font-weight: 600;
     }
   }
 }
