--- a/src/css/scss/pages/_detail.scss
+++ b/src/css/scss/pages/_detail.scss
@@ -14,6 +14,15 @@
       //  margin: 0; 
     }
   }
+  .grid-container{
+    margin-bottom: 0;
+  }
+  .banner-section .di-flex{
+    align-items: stretch;
+  }
+  .banner-carousel, .item, .banner-item, img.bg-img{
+    height: 100%;
+  }
 }
 .grid-container{
   margin: 40px 0;
@@ -25,10 +34,12 @@
     align-items: flex-start;
     justify-content: space-between;
     .lt-side{
-      width: 66%;
+      width: calc(100% - 380px);
+      max-width: 100%;
     }
     .rt-side{
-      width: 33%;
+      width: 360px;
+      max-width: 100%;
     }
     .calculator{
       background-color: #ffffff;
@@ -86,15 +97,27 @@
     justify-content: space-between;
     .col-input{
       width: 45%;
+      .form-label{
+        font-size: 16px;
+        line-height: 1.5;
+        color: #000000;
+        margin-bottom: 16px;
+        display: inline-block;
+        padding: 0 8px;
+      }
       .control{
         display: flex;
-  
+        // align-items: flex-end;
         .img-sym{
           width: auto;
           margin-right: 24px;
         }
+        
+        .right-select{
+        }
         .form-control{
           width: 90%;
+
           font-size: 14px;
           line-height: 1.5;
           color: #848484;
@@ -147,7 +170,7 @@
     .fromTo, .distance, .time{
       background-color: #ffffff;
       padding: 16px;
-      font-size: 14px;
+      font-size: 12px;
       line-height: 1.5;
       color: #000000;
       // font-weight: bold;
@@ -202,7 +225,7 @@
 .check-out-details{
   border-radius: 8px;
   background-color: #ffffff;
-  padding: 32px;
+  padding: 28px;
   box-shadow: 0px 0px 30px 0px rgb(0 0 0 / 5%);
   .cb-title{
     margin-bottom: 16px;
@@ -263,4 +286,117 @@
 }
 .check-out-details .cas-in:last-child{
   margin-bottom: 16px;
+}
+
+@media (max-width: 991.98px) {
+  .detail-page .grid-container {
+    margin: 16px 0;
+  }
+  .grid-container .flex-containt .calculator .show-data{
+    padding: 24px 18px;
+  }
+  .grid-container .flex-containt .calculator .cb-title{
+    font-size: 18px;
+  }
+  .detail-page .banner-section article .banner-item {
+    height: auto;
+  }
+  .detail-page .form-content .from-input-container .col-input{
+    width: 100%;
+    margin-bottom: 16px;
+  }
+  .detail-page .grid-container .flex-containt .calculator .cb-title{
+    margin-bottom: 12px;
+  }
+  .detail-page .form-content .from-input-container .col-input .form-label{
+    padding: 0;
+  }
+  .detail-page .form-content .get-distance{
+    width: 100%;
+  }
+  .detail-page .form-content .from-input-container{
+    margin-bottom: 16px;
+  }
+  .form-content .from-input-container .col-input .control .img-sym {
+    margin-right: 12px;
+  }
+  .grid-container .flex-containt .reach-box {
+    grid-template-columns: 1fr 1fr;
+    border: none; 
+    grid-gap: 1px;
+    background-color: transparent;
+    align-content: center;
+  }
+  .grid-container .flex-containt .reach-box .fromTo{
+    grid-column: 1 / 3;
+    border-bottom: 1px solid #d7d7d7;
+  }
+  .grid-container .flex-containt .reach-box .distance{
+    grid-column: 1 / 2;
+    border-bottom: 1px solid #d7d7d7;
+
+  }
+  .grid-container .flex-containt .reach-box .time{
+    grid-column: 2 / 3;
+    border-bottom: 1px solid #d7d7d7;
+
+  }
+  .grid-container .flex-containt .reach-box .fromTo, .grid-container .flex-containt .reach-box .distance, .grid-container .flex-containt .reach-box .time{
+    padding: 12px;
+    text-align: left;
+  }
+  .grid-container .flex-containt .calculator{
+    margin-bottom: 16px;
+  }
+  .route-info {
+    padding: 24px 16px;
+  }
+  .detail-page .largest-section{
+    margin: 16px 0;
+  }
+  .detail-page .largest-section .title-box{
+    margin-bottom: 24px;
+    padding-bottom: 12px;
+  }
+  .detail-page .blog-carousel{
+    box-shadow: none;
+  }
+  .detail-page .largest-section .blog-carousel .item .content{
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 16px;
+    padding-bottom: 0;
+  }
+  .detail-page .largest-section .blog-carousel .item .content h2{
+    font-size: 14px;
+  }
+  .detail-page .grid-container h2{
+    font-size: 16px;
+  }
+  .detail-page .popular-routes{
+    padding: 24px;
+  }
+  .detail-page .popular-routes .cb-title{
+    font-size: 18px;
+    margin-bottom: 24px;
+  }
+  .detail-page .popular-routes .rourtes .fromTo, .popular-routes .rourtes .distance, .popular-routes .rourtes .time {
+    padding: 8px;
+  }
+  .detail-page .popular-routes .rourtes{
+    margin-bottom: 16px;
+  }
+  .detail-page .check-out-details .cb-title{
+    font-size: 18px;
+  }
+  .detail-page .check-out-details .cas-in {
+    flex-wrap: wrap;
+  }
+  .detail-page .check-out-details .lft-img{
+    margin: 0 auto;
+    margin-bottom: 16px;
+  }
+  .detail-page .check-out-details .lft-txt p{
+    font-weight: normal;
+  }
 }
