--- a/src/css/scss/layout/_footer.scss
+++ b/src/css/scss/layout/_footer.scss
@@ -43,17 +43,7 @@
       margin-right: 10px;
       position: relative;
 
-      &::after {
-        content: "";
-        background: $white;
-        width: 1px;
-        height: 14px;
-        position: absolute;
-        right: 0;
-        top: 50%;
-        transform: translateY(-50%);
-        opacity: 0.6;
-      }
+      
 
       a {
         color: $white;
@@ -64,6 +54,19 @@
         line-height: 34px;
         text-align: left;
         opacity: 0.6;
+        position: relative;
+        padding-right: 16px;
+        &::after {
+          content: "";
+          background: $white;
+          width: 1px;
+          height: 14px;
+          position: absolute;
+          right: 0;
+          top: 50%;
+          transform: translateY(-50%);
+          opacity: 0.6;
+        }
       }
     }
   }
@@ -163,11 +166,31 @@
     text-align: right;
     a{
       margin: 0 8px;
-      width: 24px;
-      height: 24px;
+      // width: 24px;
+      // height: 24px;
       display: inline-block;
       text-align: center;
       vertical-align: middle;
+      svg{
+        g{
+          fill: #ffffff;
+        }
+        
+      }
+
+      &:hover{
+        svg{
+          background-color: #ffffff;
+          border-radius: 50px;
+          padding: 4px;
+          transition: 1s;
+          g{
+            fill: #f7992c;
+          }
+          
+        }
+      }
+
       img{
         width: auto;
         display: inline-block;
@@ -244,6 +267,16 @@
   display: flex;
   justify-content: end;
   z-index: 1;
+  .share-backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    // background-color: red;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    display: none;
+  }
   .hover-btn{
     background-color: #35332d;
     border: 2px solid #fff;
@@ -258,6 +291,7 @@
     border-radius: 30px;
     background-color: #f7992c;
     cursor: pointer;
+    padding: 16px;
     // margin-left: auto;
   }
   .share-icon{
@@ -292,20 +326,35 @@
         display: block;
         width: auto;
       }
-      &:hover .icon {
-        fill: #fff;
+      &:hover {
+        svg{
+          background-color: #ffffff;
+          border-radius: 50px;
+          padding: 4px;
+          transition: 1s;
+          g{
+            fill: #f7992c;
+          }
+          
+        }
       }
     }
   }
-  &:hover{
-    .share-icon{
-      display: flex;
-      width: auto;
-      animation: fadeInRight;
-      animation-duration: 1s;
-    }
+  .active{
+    display: flex;
+    width: auto;
+    animation: fadeInRight;
+    animation-duration: 1s;
   }
-}
+  // &:hover{
+  //   .share-icon{
+  //     display: flex;
+  //     width: auto;
+  //     animation: fadeInRight;
+  //     animation-duration: 1s;
+  //   }
+  }
+// }
 .popup-form{
 
   .form-container{
@@ -379,5 +428,24 @@
   }
   .scroll-top {
     right: 20px;
+  }
+  // .footer-wrapper ul.pop-resort{
+  //   display: flex;
+  //   flex-wrap: wrap;
+  // }
+  // .footer-wrapper ul.pop-resort li {
+  //   width: 47%;
+  // }
+  // .footer-wrapper ul.pop-resort li a {
+  //   display: inline-block;
+  //   padding-right: 24px;
+  // }
+  .footer-wrapper ul.pop-resort li a {
+    font-size: 12px;
+    line-height: 1.5;
+    padding-right: 8px;
+  }
+  .footer-wrapper ul.pop-resort li {
+    margin-right: 0;
   }
 }
