changes has done

--- a/src/css/scss/layout/_footer.scss
+++ b/src/css/scss/layout/_footer.scss
@@ -292,7 +292,7 @@
     background-color: #f7992c;
     cursor: pointer;
     padding: 16px;
-    // margin-left: auto;
+    margin-left: auto;
   }
   .share-icon{
     position: absolute;
