--- a/src/css/scss/pages/_category.scss
+++ b/src/css/scss/pages/_category.scss
@@ -14,6 +14,8 @@
       background-color: #f7992c;
       padding: 8px 16px;
       cursor: pointer;
+      border: none;
+      outline: none;
       &::hover{
         box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
       }
@@ -120,9 +122,7 @@
   }
 }
 @media (max-width: 991.98px) {
-  .category-page .category-page-section .category-box .cat-box{
-    width: 100%;
-  }
+
   .category-page .category-page-section .category-box .content h3{
     font-size: 14px;
     margin-bottom: 4px;
@@ -146,5 +146,10 @@
   }
   .category-page .other-cat .other-carousel .item .content .text h2 {
     font-size: 18px;
+  }
+}
+@media (max-width: 767.98px) { 
+  .category-page .category-page-section .category-box .cat-box{
+    width: 100%;
   }
 }
