--- a/src/css/scss/pages/_individual.scss
+++ b/src/css/scss/pages/_individual.scss
@@ -634,6 +634,7 @@
     .visit-place-section .visit-flex .check-out{
         padding: 24px;
         margin-bottom: 16px;
+        height: auto;
     }
     // .indiv-page .breadcrumb{
     //     white-space: nowrap;
