--- a/src/css/scss/layout/_footer.scss
+++ b/src/css/scss/layout/_footer.scss
@@ -34,6 +34,7 @@
     margin-bottom: 40px;
     padding-bottom: 30px;
     border-bottom: 1px solid #474747;
+    text-align: justify;
 
     li {
       font-size: initial;
@@ -256,14 +257,38 @@
   -webkit-animation-name: fadeInRight;
   animation-name: fadeInRight;
 }
-
+.go-to-top{
+  background-color: #35332d;
+  border: 2px solid #fff;
+  width: auto;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  z-index: 1;
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
+  background-color: #f7992c;
+  cursor: pointer;
+  padding: 16px;
+  margin: 0 auto;
+  position: fixed;
+  bottom: 124px;
+  right: 60px;
+  &:hover{
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
+  }
+}
 .scroll-top {
   position: fixed;
   bottom: 60px;
   right: 60px;
   border-radius: 30px;
   overflow: hidden;
-  width: 300px;
+  width: 340px;
   display: flex;
   justify-content: end;
   z-index: 1;
@@ -293,7 +318,13 @@
     cursor: pointer;
     padding: 16px;
     margin-left: auto;
+    // &:hover{
+    //   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    // -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    // -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    // }
   }
+  
   .share-icon{
     position: absolute;
     right: 0;
@@ -332,6 +363,7 @@
           border-radius: 50px;
           padding: 4px;
           transition: 1s;
+          fill: #f7992c;
           g{
             fill: #f7992c;
           }
@@ -447,5 +479,20 @@
   }
   .footer-wrapper ul.pop-resort li {
     margin-right: 0;
+  }
+  button.go-to-top.gotoSection {
+    right: 20px;
+  }
+  .scroll-top .hover-btn ,button.go-to-top.gotoSection{
+    width: 40px;
+    height: 40px;
+    padding: 12px;
+    bottom: 110px;
+  }
+  .scroll-top .share-icon {
+    padding: 12px 40px 12px 12px;
+  }
+  .footer-wrapper ul.pop-resort {
+    text-align: left;
   }
 }
