--- a/src/css/scss/layout/_header.scss
+++ b/src/css/scss/layout/_header.scss
@@ -369,6 +369,7 @@
       // }
     }
     .login-btn{
+      cursor: pointer;
       background-color: #510B46;
       width: 160px;
       // height: 40px;
