--- a/src/css/scss/pages/_detail.scss
+++ b/src/css/scss/pages/_detail.scss
@@ -155,6 +155,7 @@
   padding: 32px;
   margin-bottom: 32px;
   border-radius: 8px;
+  border: 2px solid #ccc;
   .cb-title{
     margin-bottom: 32px;
   }
@@ -227,6 +228,7 @@
   background-color: #ffffff;
   padding: 28px;
   box-shadow: 0px 0px 30px 0px rgb(0 0 0 / 5%);
+  border: 2px solid #ccc;
   .cb-title{
     margin-bottom: 16px;
   }
@@ -238,6 +240,9 @@
     width: 200px;
     max-width: 100%;
     height: auto;
+    img {
+      width:100%;
+    }
   }
   .lft-txt {
     margin-left: 16px;
