--- a/src/css/scss/pages/_home.scss
+++ b/src/css/scss/pages/_home.scss
@@ -169,7 +169,8 @@
   }
   form input, form .col-input select {
     border-radius: 4px;
-    padding: 10px 16px;
+    // padding: 10px 16px;
+    padding: 3px 16px;
     width: 100%;
     box-sizing: border-box;
     outline: none;
@@ -468,6 +469,48 @@
       height: 100%;
       box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
       border-radius: 8px;
+
+      .cas-rb {
+        .rb-lg {
+            margin-bottom: 16px;
+            position: relative;
+            left: 0;
+            top: 0;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+
+            .rb-stck {
+                img {
+                    width: 100%;
+                    height: auto;
+                }
+            }
+
+            .rb-lg-txt {
+                position: absolute;
+                bottom: 0;
+                background-color: rgb(0, 0, 0, 0.38);
+                color: #ffffff;
+                align-items: center;
+                width: 100%;
+                border-radius: 0 0 10px 10px;
+
+                p {
+                    font-size: 16px;
+                    color: #ffffff;
+                    overflow: hidden;
+                    padding: 13px 10px;
+                    margin: 0 auto;
+                    display: block;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                }
+            }
+
+        }
+      }
     }
   }
   .left-side{
